# Aura

./: .gitignore  CHANGELOG.md  GOALS.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
assets/sounds/: .gitkeep
aura/: __init__.py
aura/accessibility/: __init__.py  bridge.py
aura/actions/: __init__.py  executor.py
aura/audio/: __init__.py  asr.py  cues.py  tts.py  wake_word.py
aura/config/: __init__.py  profile.py
aura/dialogue/: __init__.py  intent.py  manager.py
aura/llm/: __init__.py  engine.py
aura/safety/: __init__.py  classifier.py
browser_extension/: README.md  background.js  content.js  manifest.json
models/: .gitkeep
scripts/: benchmark.py
tests/: __init__.py  test_profile.py  test_safety.py
training/: README.md
training/configs/: hey_aura.yaml
